--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -2,7 +2,7 @@ Package: me.k3a.ab
 Name: AutoBrightness
 Depends: firmware (>= 5.0)
 Conflicts: org.thebigboss.swipebright
-Version: 1.0.0
+Version: 1.1.1~beta1
 Architecture: iphoneos-arm
 Description: Automatically sets the brightness according to ambient light conditions. In contrast to iOS default autobrightness, this one also decreases the brightness when ambient light is decreased. Please disable iOS autobrightness after installing this tweak. Free for those who already bought an Apple device. Changelog: http://k3a.me/chlogs/ab.htm. This is a pre-release build, when sending me an email, please mention that. Also note that I may not be able to respond to every email regarding pre-releases.
 Maintainer: K3A
