Move the Settings Panel monitor display to the Navigation Bar title.

--- a/settings/Resources/AutoBrightness.plist
+++ b/settings/Resources/AutoBrightness.plist
@@ -17,7 +17,7 @@
 			<key>cell</key>
 			<string>PSButtonCell</string>
 			<key>label</key>
-			<string>Monitor</string>
+			<string>Enable Monitor</string>
 			<key>action</key>
 			<string>ambientPreview</string>
 			<key>id</key>
